Fixed problem with edit and delete buttons

--- a/web.config
+++ b/web.config
@@ -7,6 +7,7 @@
         </DbProviderFactories>
     </system.data>
     <connectionStrings>
-        <add connectionString="server=localhost;uid=godigioU7neg;pwd=ds]KP-T%V$[v;Database=godigio" name="godigio" providerName="MySql.Data.MySqlClient" />
+        <add connectionString="server=localhost;uid=godigioUuoak;pwd=&quot;1Ap-kh)xR=Y$&quot;;Database=godigio" name="godigio" providerName="MySql.Data.MySqlClient" />
+        <add connectionString="server=localhost;uid=cancerU8dl1;pwd=d0)$wTP!xgy@;Database=cancer" name="cancer" providerName="MySql.Data.MySqlClient" />
     </connectionStrings>
 </configuration>
